app/assets/stylesheets/campus.css.scss
.first-screen {
  background-color: #1ABC9C;
  min-height: 650px;
  padding-left: 10px;
  padding-right: 10px;
  z-index: 5;
}

.first-screen-icon {
  width: 250px;
}

.first-screen-intro-1 {
  font-size: 45px;
  color: white;

  @media (max-width: 600px) {
    font-size: 30px;
  }
}


.first-screen-intro-2 {
  font-size: 25px;
  color: #BDC3C7;

  @media (max-width: 600px) {
    font-size: 20px;
  }
}

.first-screen-button {
  display: block;
  margin-left: 33%;
  margin-right: 33%;
  margin-top: 50px;
  padding: 10px 0px 10px 0px;
  border-style: solid;
  border-width: 3px;
  border-color: #ECF0F1;
  background-color: none;
  cursor: pointer;
  color: #ECF0F1;
  text-decoration: none;

  transition-duration: 1s;
}

#startButton {
  font-size: 30px;
}

.first-screen-button:hover {
  text-decoration: none;
  background-color: #E74C3C;
  color: #ECF0F1;
}

.thumbs {
  min-height: 610px;
  z-index: 5;
}

.thumb {
  height: 300px;
  padding:0;
  overflow: hidden;
}

.thumb img {
  margin: 0;
  padding: 0;
/*  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -ms-transition: all 1s ease;
  transition: all 1s ease;      
*/}

.active-thumb-span {
  position: absolute;
  display: block;
  bottom: 20px;
  left: 10px;
  font-size: 40px;
  text-transform: uppercase;
  color: #fff;
  padding: 0 20px;
  transition: all 0.1s ease-in;    
}

.inactive-thumb-span {
  position: absolute;
  display: block;
  bottom: 20px;
  left: 10px;
  font-size: 40px;
  text-transform: uppercase;
  color: #585858;
  padding: 0 20px;
  transition: all 0.1s ease-in;    
}

.inactive-thumb-span-banner {
  position: absolute;
  display: block;
  bottom: 100px;
  left: 10px;
  font-size: 30px;
  color: #BDC3C7;
  padding: 0 20px;
  transition: all 0.1s ease-in;
}

.active-thumb:hover img { 
  opacity: 1.0;   
  -webkit-transform: scale(1.05,1.05);
  -moz-transform:scale(1.05,1.05);
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;      
}

.coming-soon-banner {
  font-size: 30px;
  bottom: 100px;
}

.coming-soon-school {
  color: grey;
}

.active-campus-image {
  /* Used in Javascript */
}

.inactive-campus-image {
  /* Used in Javascript */
}

.active-campus-img-overlay {
  opacity: .3;
  background-color: black;
  position: absolute;
  max-width: 100%;
  display: block;
  margin: 0;
  padding: 0;
  height: 100%;
  overflow: auto;
  width: 100%;
}

.inactive-campus-img-overlay {
  opacity: .9;
  background-color: black;
  position: absolute;
  max-width: 100%;
  display: block;
  margin: 0;
  padding: 0;
  height: 100%;
  overflow: auto;
  width: 100%;
}

.category-dialogue {
  display: none;
  position: fixed;
  min-width: 450px;
  background-color: rgba(213, 213, 213, 0.6980392);
  margin-top: -600px;
  margin-bottom: 150px;
  padding-top: 30px;
  padding-bottom: 30px;
  z-index: 10;
}

.category-icon {
  cursor: pointer;
  border-radius: 50%;
  border-width: 3px;
  border-color: white;

  transition-property: background-color;
  transition-duration: 0.5s;
}

.category-icon:hover {
  background-color: #E74C3C;
}

.category-icon-label {
  font-size: 16px;
}

